Clear all odd sections for uneven lists on home page. [bug 614068]

--- a/media/css/home.css
+++ b/media/css/home.css
@@ -127,6 +127,11 @@ body.mobile #featured {
     width: 205px;
 }
 
+#home-content-explore section:nth-child(odd),
+#home-content-explore section.odd {
+    clear: left;
+}
+
 #home-content-explore ul {
     margin-bottom: 1em;
     padding-left: 1em;
